resources/app-sre-stage/app-interface-stage/app-interface.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
  labels:
    service: app-interface
  name: app-interface-stg
spec:
  host: app-interface.stage.devshift.net
  to:
    kind: Service
    name: app-interface-nginx-gate
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
