resources/app-sre-stage/app-interface-stage/cvexporter.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    service: cvexporter
  name: cvexporter
spec:
  host: cvexporter.stage.devshift.net
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: cvexporter
    weight: 100
  wildcardPolicy: None
